--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,26 +3,45 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
 
+    <!--<item android:id="@+id/moniteur"-->
+        <!--android:icon="@drawable/coach"-->
+        <!--android:title="Moniteurs"-->
+        <!--android:showAsAction="ifRoom">-->
+    <!--</item>-->
+    <!--<item android:id="@+id/cavalier"-->
+        <!--android:icon="@drawable/bombe"-->
+        <!--android:title="Cavaliers"-->
+        <!--android:showAsAction="ifRoom">-->
+    <!--</item>-->
+    <!--<item android:id="@+id/monture"-->
+        <!--android:icon="@drawable/cheval"-->
+        <!--android:title="Montures"-->
+        <!--android:showAsAction="ifRoom">-->
+    <!--</item>-->
 
-    <item
-        android:id="@+id/kath"
-        android:title="@string/menu_kath"
-        app:icon="@drawable/cheval"
-        app:showAsAction="never" />
+    <item android:id="@+id/link"
+        android:icon="@drawable/link"
+        android:title="@string/menu_http"
+        android:showAsAction="ifRoom">
 
-    <item
-        android:id="@+id/hippologie"
-        android:title="@string/menu_hippologie"
-        app:icon="@drawable/cheval"
-        app:showAsAction="never" />
+        <menu>
+            <item
+                android:id="@+id/kath"
+                android:title="@string/menu_kath"
+                app:icon="@drawable/link"/>
+
+            <item
+                android:id="@+id/hippologie"
+                android:title="@string/menu_hippologie"
+                app:icon="@drawable/link"/>
+
+        </menu>
+    </item>
 
     <item
         android:id="@+id/export_db"
         android:title="@string/menu_export_db"
         app:icon="@drawable/backup"
         app:showAsAction="never" />
-
-
-
 
 </menu>
