--- a/app/src/main/res/layout/activity_cavalier_main.xml
+++ b/app/src/main/res/layout/activity_cavalier_main.xml
@@ -4,15 +4,14 @@
 
         <LinearLayout
             android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentLeft="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:weightSum="1">
 
             <Button
-                android:layout_marginTop="30px"
-                android:layout_width="400px"
-                android:layout_height="70px"
+                android:layout_marginTop="10dp"
+                android:layout_width="200dp"
+                android:layout_height="50dp"
                 android:text="@string/title_home_add_cours"
                 android:id="@+id/button4"
                 android:textColor="@android:color/holo_red_dark"
@@ -25,12 +24,12 @@
                 android:layout_height="wrap_content"
                 android:src="@drawable/home"
                 android:layout_gravity="center"
-                android:layout_marginTop="30px" />
+                android:layout_marginTop="10dp" />
 
             <Button
-                android:layout_marginTop="30px"
-                android:layout_width="400px"
-                android:layout_height="70px"
+                android:layout_marginTop="10dp"
+                android:layout_width="200dp"
+                android:layout_height="50dp"
                 android:text="@string/title_home_list_cours"
                 android:id="@+id/button5"
                 android:textColor="@android:color/holo_red_dark"
@@ -39,9 +38,9 @@
                 android:layout_gravity="center_horizontal" />
 
             <Button
-                android:layout_marginTop="30px"
-                android:layout_width="400px"
-                android:layout_height="70px"
+                android:layout_marginTop="10dp"
+                android:layout_width="200dp"
+                android:layout_height="50dp"
                 android:text="@string/title_home_moniteurs"
                 android:id="@+id/button1"
                 android:textSize="20sp"
@@ -50,9 +49,9 @@
                 android:layout_gravity="center_horizontal" />
 
             <Button
-                android:layout_marginTop="30px"
-                android:layout_width="400px"
-                android:layout_height="70px"
+                android:layout_marginTop="10dp"
+                android:layout_width="200dp"
+                android:layout_height="50dp"
                 android:text="@string/title_home_cavaliers"
                 android:id="@+id/button2"
                 android:textColor="@android:color/holo_red_dark"
@@ -61,9 +60,9 @@
                 android:layout_gravity="center_horizontal" />
 
             <Button
-                android:layout_marginTop="30px"
-                android:layout_width="400px"
-                android:layout_height="70px"
+                android:layout_marginTop="10dp"
+                android:layout_width="200dp"
+                android:layout_height="50dp"
                 android:text="@string/title_home_montures"
                 android:id="@+id/button3"
                 android:textColor="@android:color/holo_red_dark"
@@ -73,12 +72,12 @@
 
 
             <Button
-                android:layout_marginTop="30px"
-                android:layout_width="400px"
-                android:layout_height="60px"
+                android:layout_marginTop="10dp"
+                android:layout_width="400dp"
+                android:layout_height="50dp"
                 android:text="@string/action_init_data"
                 android:id="@+id/button0"
-                android:textSize="10sp"
+                android:textSize="12sp"
                 android:textColor="@android:color/black"
                 android:textStyle="bold"
                 android:layout_gravity="center_horizontal" />
