--- a/app/src/main/res/layout/activity_cavalier_add_personne.xml
+++ b/app/src/main/res/layout/activity_cavalier_add_personne.xml
@@ -104,9 +104,14 @@
                 android:layout_centerVertical="true"/>
         </TableRow>
 
-
-
     </TableLayout>
+
+    <ImageView android:id="@+id/personne_pic"
+        android:layout_width="400px"
+        android:layout_height="400px"
+        android:layout_below="@+id/tableLayout"
+        android:layout_centerHorizontal="true"/>
+
 
 
 </RelativeLayout>
