--- a/app/src/main/res/menu/menu_cavalier_add_personne.xml
+++ b/app/src/main/res/menu/menu_cavalier_add_personne.xml
@@ -14,6 +14,17 @@
         app:icon="@drawable/smallexit"
         app:showAsAction="ifRoom" />
 
+    <item android:id="@+id/action_take_picture"
+        android:title="Prendre une photo"
+        app:icon="@drawable/camera"
+        app:showAsAction="ifRoom" />
+
+    <item android:id="@+id/action_select_picture"
+        android:title="Choisir une photo"
+        app:icon="@drawable/file"
+        app:showAsAction="ifRoom" />
+
+
     <item android:id="@+id/action_delete_personne"
         android:title="@string/action_delete"
         app:icon="@drawable/delete"
