--- a/app/src/main/res/layout/activity_cavalier_list_personne_item.xml
+++ b/app/src/main/res/layout/activity_cavalier_list_personne_item.xml
@@ -4,12 +4,19 @@
     android:id="@+id/item_personne">
 
 
+    <ImageView android:id="@+id/pic"
+        android:layout_width="100px"
+        android:layout_height="100px"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="5dp"/>
+
     <TextView android:text="Prénom" android:id="@+id/prenom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:textSize="20sp"
-        android:layout_marginLeft="5dp">
+        android:layout_marginLeft="80dp"
+        android:layout_centerVertical="true">
     </TextView>
 
     <TextView android:text="Nom" android:id="@+id/nom"
@@ -17,7 +24,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:textSize="20sp"
-        android:layout_marginLeft="180dp">
+        android:layout_marginLeft="200dp"
+        android:layout_centerVertical="true">
     </TextView>
 
 
