--- a/app/src/main/res/layout/activity_cavalier_add_cours.xml
+++ b/app/src/main/res/layout/activity_cavalier_add_cours.xml
@@ -35,9 +35,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_column="1"
-                    android:contentDescription="Date"
                     android:background="#00000000"
-                    android:src="@drawable/calendrier" />
+                    android:src="@drawable/calendar"
+
+                    android:layout_gravity="bottom|left"
+                    android:layout_marginLeft="20dp" />
             </TableRow>
 
             <TableRow
