--- a/app/src/main/res/layout/activity_cavalier_export.xml
+++ b/app/src/main/res/layout/activity_cavalier_export.xml
@@ -19,7 +19,7 @@
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cours"
+        android:text="Reprises"
         android:id="@+id/exp_cours" />
 
 
