--- a/app/src/main/res/layout/activity_cavalier_add_cours.xml
+++ b/app/src/main/res/layout/activity_cavalier_add_cours.xml
@@ -176,8 +176,7 @@
             android:text="Observations"
             android:textSize="15sp"
             android:id="@+id/textView8"
-            android:layout_below="@+id/tableLayout"
-            android:layout_column="0" />
+            android:layout_below="@+id/tableLayout" />
 
         <EditText
             android:layout_marginTop="10dp"
