--- a/app/src/main/res/layout/activity_cavalier_filter.xml
+++ b/app/src/main/res/layout/activity_cavalier_filter.xml
@@ -20,6 +20,18 @@
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent">
 
+
+                <TextView
+                    android:layout_marginTop="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="20dp"
+                    android:text="Date début"
+                    android:textSize="15sp"
+                    android:id="@+id/textSD"
+                    android:layout_column="0"
+                    />
+
                 <TextView
                     android:layout_marginTop="20dp"
                     android:layout_width="wrap_content"
@@ -27,16 +39,26 @@
                     android:text=""
                     android:textSize="15sp"
                     android:id="@+id/textViewStartDate"
-                    android:layout_column="0"
+                    android:layout_column="1"
                     />
 
                 <ImageButton
                     android:id="@+id/startDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_column="1"
+                    android:layout_column="2"
                     android:background="#00000000"
                     android:src="@drawable/calendar"
+                    android:layout_gravity="bottom|left"
+                    android:layout_marginLeft="20dp" />
+
+                <ImageButton
+                    android:id="@+id/deleteStartDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_column="3"
+                    android:background="#00000000"
+                    android:src="@drawable/delete"
                     android:layout_gravity="bottom|left"
                     android:layout_marginLeft="20dp" />
 
@@ -50,23 +72,52 @@
                     android:layout_marginTop="20dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="20dp"
+                    android:text="Date fin"
+                    android:textSize="15sp"
+                    android:id="@+id/textED"
+                    android:layout_column="0"
+                    />
+
+                <TextView
+                    android:layout_marginTop="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text=""
                     android:textSize="15sp"
                     android:id="@+id/textViewEndDate"
-                    android:layout_column="0"
+                    android:layout_column="1"
                     />
 
                 <ImageButton
                     android:id="@+id/endDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_column="1"
+                    android:layout_column="2"
                     android:background="#00000000"
                     android:src="@drawable/calendar"
                     android:layout_gravity="bottom|left"
                     android:layout_marginLeft="20dp" />
 
+                <ImageButton
+                    android:id="@+id/deleteEndDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_column="3"
+                    android:background="#00000000"
+                    android:src="@drawable/delete"
+                    android:layout_gravity="bottom|left"
+                    android:layout_marginLeft="20dp" />
+
             </TableRow>
+
+        </TableLayout>
+
+        <TableLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tableLayout"
+            android:id="@+id/tableLayoutBis">
 
             <TableRow
                 android:layout_width="fill_parent"
