--- a/app/src/main/res/layout/activity_cavalier_add_monture.xml
+++ b/app/src/main/res/layout/activity_cavalier_add_monture.xml
@@ -165,7 +165,7 @@
                     android:layout_marginTop="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Evènements"
+                    android:text="Soins"
                     android:textSize="20sp"
                     android:id="@+id/textView9"
                     android:layout_column="0" />
