--- a/app/src/main/res/layout/activity_cavalier_add_personne.xml
+++ b/app/src/main/res/layout/activity_cavalier_add_personne.xml
@@ -131,6 +131,7 @@
     </TableLayout>
 
     <ImageView android:id="@+id/personne_pic"
+        android:contentDescription="Photo"
         android:layout_width="400px"
         android:layout_height="400px"
         android:layout_below="@+id/tableLayout"
