--- a/app/src/main/res/layout/activity_cavalier_export.xml
+++ b/app/src/main/res/layout/activity_cavalier_export.xml
@@ -30,6 +30,7 @@
 
 
     <ImageButton
+        android:contentDescription="Export"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/btExport"
