--- a/app/src/main/res/layout/activity_cavalier_list_monture_item.xml
+++ b/app/src/main/res/layout/activity_cavalier_list_monture_item.xml
@@ -5,6 +5,7 @@
 
 
     <ImageView android:id="@+id/pic"
+        android:contentDescription="Photo"
         android:layout_width="100px"
         android:layout_height="100px"
         android:layout_alignParentLeft="true"
