--- a/app/src/main/res/layout/activity_cavalier_main.xml
+++ b/app/src/main/res/layout/activity_cavalier_main.xml
@@ -20,6 +20,7 @@
                 android:layout_gravity="center_horizontal" />
 
             <ImageView
+                android:contentDescription="Cavalier"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/home"
