--- a/app/src/main/res/layout/custom_spinner.xml
+++ b/app/src/main/res/layout/custom_spinner.xml
@@ -6,6 +6,7 @@
     android:padding="3px" >
 
     <ImageView android:id="@+id/left_pic"
+        android:contentDescription="Image"
         android:layout_width="100px"
         android:layout_height="80px" />
 
