--- a/app/src/main/res/layout/activity_cavalier_list_evenement_item.xml
+++ b/app/src/main/res/layout/activity_cavalier_list_evenement_item.xml
@@ -3,12 +3,21 @@
     android:layout_width="wrap_content" android:layout_height="wrap_content"
     android:id="@+id/item_personne">
 
+
+    <ImageView android:id="@+id/pic"
+        android:contentDescription="Photo"
+        android:layout_width="92px"
+        android:layout_height="92px"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="5dp"/>
+
+
     <TextView android:text="Date" android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:textSize="15sp"
-        android:layout_marginLeft="5dp"
+        android:textSize="12sp"
+        android:layout_marginLeft="70dp"
         android:layout_centerVertical="true">
     </TextView>
 
@@ -16,29 +25,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:textSize="15sp"
-        android:layout_marginLeft="80dp"
-        android:layout_centerVertical="true">
-    </TextView>
-
-    <TextView android:text="Observation" android:id="@+id/observation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:textSize="15sp"
-        android:layout_marginLeft="170dp"
-        android:layout_centerVertical="true">
+        android:textSize="12sp"
+        android:layout_marginLeft="130dp"
+        android:layout_centerVertical="true"
+        android:maxLines="2"
+        android:lines="1">
     </TextView>
 
     <ImageButton
         android:id="@+id/delete"
         android:layout_width="22dp"
         android:layout_height="22dp"
-        android:layout_alignParentLeft="true"
         android:layout_marginLeft="290dp"
+        android:layout_centerVertical="true"
         android:contentDescription="Supprimer"
         android:background="#00000000"
         android:scaleType="fitCenter"
-        android:src="@drawable/delete" />
+        android:src="@drawable/delete"
+        android:adjustViewBounds="false" />
 
 </RelativeLayout>
