--- a/app/src/main/res/layout/custom_spinner.xml
+++ b/app/src/main/res/layout/custom_spinner.xml
@@ -3,21 +3,21 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="3px" >
+    android:padding="3dp" >
 
     <ImageView android:id="@+id/left_pic"
         android:contentDescription="Image"
-        android:layout_width="100px"
-        android:layout_height="80px" />
+        android:layout_width="90dp"
+        android:layout_height="70dp" />
 
     <TextView android:id="@+id/text_main_seen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5px"
-        android:layout_marginTop="2px"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="2dp"
         android:layout_toRightOf="@+id/left_pic"
-        android:padding="3px"
-        android:textSize="25px"
+        android:padding="3dp"
+        android:textSize="15sp"
         android:textStyle="bold"
         android:layout_centerVertical="true"/>
 
