--- a/app/src/main/res/layout/activity_cavalier_add_cours.xml
+++ b/app/src/main/res/layout/activity_cavalier_add_cours.xml
@@ -63,8 +63,7 @@
                     android:id="@+id/spMonture"
                     android:spinnerMode="dialog"
                     android:textSize="15sp"
-                    android:layout_column="1"
-                    android:layout_centerVertical="true"/>
+                    android:layout_column="1"/>
             </TableRow>
 
             <TableRow
@@ -87,8 +86,7 @@
                     android:id="@+id/spCavalier"
                     android:spinnerMode="dialog"
                     android:textSize="15sp"
-                    android:layout_column="1"
-                    android:layout_centerVertical="true"/>
+                    android:layout_column="1"/>
             </TableRow>
 
             <TableRow
