--- a/app/src/main/res/layout/activity_cavalier_list_evenement_item.xml
+++ b/app/src/main/res/layout/activity_cavalier_list_evenement_item.xml
@@ -6,8 +6,8 @@
 
     <ImageView android:id="@+id/pic"
         android:contentDescription="Photo"
-        android:layout_width="92px"
-        android:layout_height="92px"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="5dp"/>
 
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:textSize="12sp"
-        android:layout_marginLeft="70dp"
+        android:layout_marginLeft="82dp"
         android:layout_centerVertical="true">
     </TextView>
 
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:textSize="12sp"
-        android:layout_marginLeft="130dp"
+        android:layout_marginLeft="140dp"
         android:layout_centerVertical="true"
         android:maxLines="2"
         android:lines="1">
