--- a/app/src/main/res/layout/activity_cavalier_list_personne_item.xml
+++ b/app/src/main/res/layout/activity_cavalier_list_personne_item.xml
@@ -6,8 +6,8 @@
 
     <ImageView android:id="@+id/pic"
         android:contentDescription="Photo"
-        android:layout_width="100px"
-        android:layout_height="100px"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="5dp"/>
 
