--- a/app/src/main/res/layout/activity_cavalier_add_cours.xml
+++ b/app/src/main/res/layout/activity_cavalier_add_cours.xml
@@ -109,8 +109,7 @@
                     android:id="@+id/spMoniteur"
                     android:spinnerMode="dialog"
                     android:textSize="15sp"
-                    android:layout_column="1"
-                    android:layout_centerVertical="true"/>
+                    android:layout_column="1"/>
             </TableRow>
 
             <TableRow
@@ -133,8 +132,7 @@
                     android:id="@+id/spLieu"
                     android:spinnerMode="dialog"
                     android:textSize="15sp"
-                    android:layout_column="1"
-                    android:layout_centerVertical="true"/>
+                    android:layout_column="1"/>
             </TableRow>
 
             <TableRow
@@ -156,8 +154,6 @@
                     android:id="@+id/editTextDuree"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignBaseline="@+id/textView2"
-                    android:layout_toRightOf="@+id/textView2"
                     android:ems="10"
                     android:textSize="15sp"
                     android:inputType="number"
