--- a/app/src/main/res/layout/activity_cavalier_add_monture.xml
+++ b/app/src/main/res/layout/activity_cavalier_add_monture.xml
@@ -37,8 +37,6 @@
                     android:id="@+id/editTextNom"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignBaseline="@+id/textView2"
-                    android:layout_toRightOf="@+id/textView2"
                     android:ems="10"
                     android:textSize="20sp"
                     android:inputType="textCapWords" />
@@ -65,8 +63,7 @@
                     android:id="@+id/spGenre"
                     android:spinnerMode="dialog"
                     android:textSize="20sp"
-                    android:layout_column="1"
-                    android:layout_centerVertical="true"/>
+                    android:layout_column="1"/>
             </TableRow>
 
             <TableRow
@@ -87,8 +84,6 @@
                     android:id="@+id/editTextRobe"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignBaseline="@+id/textView5"
-                    android:layout_toRightOf="@+id/textView5"
                     android:ems="10"
                     android:textSize="20sp"
                     android:inputType="textCapWords" />
@@ -113,8 +108,6 @@
                     android:id="@+id/editTextRace"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignBaseline="@+id/textView5"
-                    android:layout_toRightOf="@+id/textView5"
                     android:ems="10"
                     android:textSize="20sp"
                     android:inputType="textCapWords" />
@@ -130,8 +123,7 @@
             android:text="Caractéristiques"
             android:textSize="20sp"
             android:id="@+id/textView8"
-            android:layout_below="@+id/tableLayout"
-            android:layout_column="0" />
+            android:layout_below="@+id/tableLayout" />
 
         <EditText
             android:layout_marginTop="10dp"
