--- a/app/src/main/res/layout/activity_cavalier_add_cours.xml
+++ b/app/src/main/res/layout/activity_cavalier_add_cours.xml
@@ -2,7 +2,8 @@
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:id="@+id/cours_scrollView">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
