--- a/app/src/main/res/menu/menu_cavalier_http.xml
+++ b/app/src/main/res/menu/menu_cavalier_http.xml
@@ -1,6 +1,5 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res/android">
 
     <item android:id="@+id/action_close"
         android:title="@string/action_close"
