--- a/app/src/main/res/layout/activity_cavalier_main.xml
+++ b/app/src/main/res/layout/activity_cavalier_main.xml
@@ -83,8 +83,17 @@
                 android:textStyle="bold"
                 android:layout_gravity="center_horizontal" />
 
+            <Button
+                android:layout_marginTop="6dp"
+                android:layout_width="200dp"
+                android:layout_height="45dp"
+                android:text="@string/action_planning"
+                android:id="@+id/button6"
+                android:textColor="@android:color/holo_red_dark"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_gravity="center_horizontal" />
+
         </LinearLayout>
-
-
 
 </ScrollView>
