--- a/app/src/main/res/menu/menu_cavalier_planning.xml
+++ b/app/src/main/res/menu/menu_cavalier_planning.xml
@@ -1,17 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
     <item android:id="@+id/action_close_cours"
-        android:title="@string/action_close"
+        android:title="@string/action_end"
         app:icon="@drawable/smallexit"
         app:showAsAction="ifRoom" />
-
-    <item android:id="@+id/action_today"
-        android:title="@string/action_today"
-        android:orderInCategory="100"
-        app:showAsAction="ifRoom"/>
-
 
     <group android:checkableBehavior="single">
         <item android:id="@+id/action_day_view"
