--- a/app/src/main/res/layout/activity_cavalier_add_personne.xml
+++ b/app/src/main/res/layout/activity_cavalier_add_personne.xml
@@ -122,15 +122,29 @@
                 android:layout_column="1"/>
         </TableRow>
 
+
+        <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_marginTop="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Photo"
+                android:textSize="20sp"
+                android:layout_column="0"/>
+
+            <ImageView android:id="@+id/personne_pic"
+                android:contentDescription="Photo"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_below="@+id/tableLayout"
+                android:layout_centerHorizontal="true"
+                android:layout_column="1"/>
+
+        </TableRow>
+
     </TableLayout>
-
-    <ImageView android:id="@+id/personne_pic"
-        android:contentDescription="Photo"
-        android:layout_width="400dp"
-        android:layout_height="400dp"
-        android:layout_below="@+id/tableLayout"
-        android:layout_centerHorizontal="true"/>
-
-
 
 </RelativeLayout>
